src/components/style/Profile.css
@import url('https://fonts.googleapis.com/css?family=Abel');

.Home-content-desktop {
    display: flex;
    flex-direction: column;
    position: absolute;
    font-weight: 800;
    width: 85vw;
    margin-top: 115px;
}

.Home-content-mobile {
    display: flex;
    flex-direction: column;
    position: absolute;
    font-weight: 800;
    width: 85vw;
    margin-top: 90px;
}

.Profile-header-mobile {
    display: flex;
    height: fit-content;
    background-color: rgb(237, 237, 237);
    color: black;
    border: 1px solid black;
    border-radius: 20px;
    box-shadow: 1.5px 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.18);
    margin-bottom: 25px;
}

.Profile-header-desktop {
    display: flex;
    justify-content: space-between;
    height: fit-content;
    max-height: 660.45px;
    background-color: rgb(237, 237, 237);
    color: black;
    border: 1px solid black;
    border-top: 0px;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
    box-shadow: 1.5px 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.18);
    margin-bottom: 25px;
    padding-right: 50px;
}

.Header-image {
    opacity: 0.9;
    background-image: url("../../assets/ProfileHeader.jpg");
    background-size: cover;
    background-position: center;
    height: 150px;
    width: auto;
    border: 1px solid black;
    border-bottom: 0px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    box-shadow: 1.5px 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.18);
}

.Profile-description-mobile {
    height: fit-content;
    background-color: rgb(237, 237, 237);
    color: black;
    border: 1px solid black;
    border-radius: 20px;
    box-shadow: 1.5px 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.18);
    margin-bottom: 25px;
    padding: 10px;
}

.Profile-description-body-desktop {
    display: flex;
    justify-content: space-between;
    padding-right: 3vw;
    padding-left: 3vw;
    margin-top: 25px;
}

.Description-category {
    max-width: 20vw;
}

.Profile-photo-mobile {
    width: 125px;
    height: 125px;
    border: 0.5px solid black;
    border-radius: 20px;
    justify-self: flex-start;
    margin-left: -0.5px;
}

.Profile-photo-desktop {
    width: 150px;
    height: 150px;
    border: 0.5px solid black;
    border-radius: 20px;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
    justify-self: flex-start;
    margin-left: -0.5px;
}

.Profile-header-text {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-top: 10px;
    margin-left: 10px;
    font-family: "Abel";
    font-weight: 800;
}

.Profile-header-text-desktop {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-self: center;
    margin-left: 25px;
    font-family: "Abel";
    font-weight: 800;
}

@media (max-width: 700px) {
    .Profile-header-text-desktop {
        opacity: 0;
    }
}

.Large-mobile-text {
    font-size: 25px;
    margin-bottom: 5px;
}

.Muted-mobile-text {
    color: rgb(84, 84, 84);
    font-size: 15px;
}

.Description-mobile-text {
    display: flex;
    color: rgb(48, 48, 48);
    font-size: 15px;
    text-align: left;
    width: 90%;
}

.Description-desktop-text {
    display: flex;
    color: rgb(48, 48, 48);
    font-size: 18px;
    text-align: left;
    width: 90%;
}

.Sub-description-mobile-text {
    display: flex;
    color: rgb(48, 48, 48);
    font-size: 15px;
    text-align: left;
    width: 90%;
    margin-left: 15px;
}

.Subheading-mobile-text {
    display: flex;
    color: rgb(0, 0, 0);
    font-size: 16px;
    text-align: left;
    width: 90%;
}

.List-mobile-text {
    display: flex;
    color: rgb(48, 48, 48);
    font-size: 15px;
}

.Profile-header-buttons-desktop {
    display: flex;
    flex-direction: row;
    align-items: center;
}

@media (max-width: 750px) {
    .Profile-header-buttons-desktop {
        opacity: 0;
    }
}

.Contact-button-mobile {
    cursor: pointer;
    margin-top: 10px;
    border: none;
    border-radius: 5px;
    background-color: rgb(35, 35, 35);
    color: white;
    height: 25px;
    width: 100px;
    font-size: 15px;
    font-weight: 800;
    font-family: "Abel";
}

.Contact-button-desktop {
    cursor: pointer;
    border: none;
    border-radius: 5px;
    background-color: rgb(35, 35, 35);
    color: white;
    height: 75px;
    width: 100px;
    font-size: 15px;
    font-weight: 800;
    font-family: "Abel";
}
.Contact-button-desktop:hover {
    transform: scale(1.05);
}

.Projects-button-mobile {
    cursor: pointer;
    margin-top: 10px;
    border: none;
    border-radius: 5px;
    background-color: rgb(35, 35, 35);
    color: white;
    height: 25px;
    width: 125px;
    font-size: 15px;
    font-weight: 800;
    font-family: "Abel";
}

.Projects-button-desktop {
    cursor: pointer;
    margin-left: 10px;
    border: none;
    border-radius: 5px;
    background-color: rgb(35, 35, 35);
    color: white;
    height: 75px;
    width: 135px;
    font-size: 15px;
    font-weight: 800;
    font-family: "Abel";
    align-self: center;
}
.Projects-button-desktop:hover {
    transform: scale(1.05);
}

.Profile-header-main {
    display: flex;
}

